[gd_scene load_steps=8 format=2]

[ext_resource path="res://Sprites/SpritesBblioteca/pixel-art-da-sala-de-trabalho-de-escritorio_150088-482.png" type="Texture" id=1]
[ext_resource path="res://Sprites/SpritesBblioteca/PainelSI.png" type="Texture" id=2]
[ext_resource path="res://Sprites/SpritesBblioteca/PainelCC.png" type="Texture" id=3]
[ext_resource path="res://Sprites/SpritesBblioteca/PainelEC.png" type="Texture" id=4]
[ext_resource path="res://Sprites/SpritesBblioteca/PainelES.png" type="Texture" id=5]
[ext_resource path="res://Scenes/Computer.gd" type="Script" id=6]
[ext_resource path="res://Sprites/SpritesBblioteca/BotãoX.png" type="Texture" id=7]

[node name="Computer" type="Node2D"]
position = Vector2( -83, -20 )
scale = Vector2( 1.86417, 1.80307 )
script = ExtResource( 6 )

[node name="Pixel-art-da-sala-de-trabalho-de-escritorio150088-482" type="Sprite" parent="."]
position = Vector2( 561.5, 315.5 )
scale = Vector2( 1.64583, 1.70655 )
texture = ExtResource( 1 )

[node name="PainelCc" type="Sprite" parent="."]
position = Vector2( 468, 314 )
scale = Vector2( 1.3, 1.3 )
texture = ExtResource( 3 )

[node name="PainelSi" type="Sprite" parent="."]
position = Vector2( 258, 315 )
scale = Vector2( 1.3, 1.3 )
texture = ExtResource( 2 )

[node name="PainelEc" type="Sprite" parent="."]
position = Vector2( 677, 312 )
scale = Vector2( 1.3, 1.3 )
texture = ExtResource( 4 )

[node name="PainelEs" type="Sprite" parent="."]
position = Vector2( 887, 313 )
scale = Vector2( 1.3, 1.3 )
texture = ExtResource( 5 )

[node name="ButtonSair" type="Button" parent="."]
margin_left = 947.0
margin_top = 99.0
margin_right = 981.0
margin_bottom = 132.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BotãoX" type="Sprite" parent="."]
position = Vector2( 965.577, 113.14 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 7 )

[node name="LabelQZSI" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = 225.0
margin_top = 226.0
margin_right = 247.0
margin_bottom = 240.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelEXPSI" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = 225.0
margin_top = 267.0
margin_right = 249.0
margin_bottom = 281.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelGeralSI" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = 221.546
margin_top = 327.774
margin_right = 261.546
margin_bottom = 341.774
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelQZCC" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = 433.0
margin_top = 226.0
margin_right = 458.0
margin_bottom = 240.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelEXPCC" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = 437.0
margin_top = 265.0
margin_right = 459.0
margin_bottom = 279.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelGeralCC" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = 435.583
margin_top = 329.993
margin_right = 475.583
margin_bottom = 343.993
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelQZEC" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = 644.0
margin_top = 224.0
margin_right = 668.0
margin_bottom = 238.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelEXPEC" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = 649.0
margin_top = 265.0
margin_right = 670.0
margin_bottom = 279.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelGeralEC" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = 643.182
margin_top = 328.884
margin_right = 683.182
margin_bottom = 342.884
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelQZES" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = 851.0
margin_top = 224.0
margin_right = 879.0
margin_bottom = 238.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelEXPES" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = 857.0
margin_top = 265.0
margin_right = 878.0
margin_bottom = 279.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelGeralES" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = 854.536
margin_top = 326.665
margin_right = 894.536
margin_bottom = 340.665
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="ButtonSair" to="." method="_on_ButtonSair_pressed"]
